test/fail/generated/test_Tanhshrink/model.pb
pytorch0.3:j

01"Tanh

0
12"Subtorch-jit-exportZ
0




b
2




B